new course codes

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                         fill="currentColor" class="bi bi-camera-video mb-1 me-1" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd"
                                             d="M0 5a2 2 0 0 1 2-2h7.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 4.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 13H2a2 2 0 0 1-2-2V5zm11.5 5.175 3.5 1.556V4.269l-3.5 1.556v4.35zM2 4a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h7.5a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1H2z" />
-                                    </svg>Vidéos et podcasts</div>
+                                    </svg>Vidéos et balados</div>
                                 <div class="card-body text-dark">
                                     <ul>
                                         <li><img src="images/CSPS.svg" alt="" /><a
@@ -319,7 +319,7 @@
                                         <li><img src="images/Skillsoft.svg" alt="" /><a
                                                 href="https://www.csps-efpc.gc.ca/Catalogue/courses-fra.aspx?code=X166"
                                                 target="_blank"
-                                                aria-label="X166 - Diriger la diversité ,Contenu fourni par Skillsoft">X166
+                                                aria-label="IWMI01203 - Diriger la diversité ,Contenu fourni par Skillsoft">IWMI01203
                                                 - Diriger la diversité </a></li>
                                         <li><img src="images/CSPS.svg" alt="" />W091 - Série « Créer un milieu de
                                             travail inclusif » (à venir)</li>
@@ -401,7 +401,7 @@
                                                 href="https://learn-apprendre.csps-efpc.gc.ca/application/fr/content/la-diversite-est-un-fait-linclusion-est-un-choix-une-federologue"
                                                 target="_blank"
                                                 aria-label="La diversité est un fait; l'inclusion est un choix - une FÉDérologue, Contenu fourni par l'École de la fonction publique du Canada">La
-                                                diversité est un fait; l'inclusion est un choix - une FÉDérologue</a>
+                                                diversité est un fait l'inclusion est un choix - une FÉDérologue</a>
                                         </li>
                                         <!-- <li><img src="images/CSPS.svg" alt="" /><a
                                                 href="https://learn-apprendre.csps-efpc.gc.ca/application/en/content/gba-message-honourable-maryam-monsef"
@@ -484,16 +484,15 @@
                                         fill="currentColor" class="bi bi-laptop mb-1 me-1" viewBox="0 0 16 16">
                                         <path
                                             d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z" />
-                                    </svg>Online Self-Paced</div>
+                                    </svg>En ligne à rythme libre </div>
                                 <div class="card-body text-dark">
                                     <ul>
                                         <li><img src="images/CSPS.svg" alt="" /><a
-                                                href="http://www.ohrc.on.ca/sites/default/files/media/html/call-it-out_en/index.html"
+                                                href=" http://www.ohrc.on.ca/fr/apprentissage/apprentissage-en-ligne/denoncez-le"
                                                 target="_blank"
-                                                aria-label="W250 - Call it Out: Racism, Racial
-                                            Discrimination and Human Rights, Contenu fourni par l'École de la fonction publique du Canada">W250
-                                                - Call it Out: Racism, Racial
-                                                Discrimination and Human Rights</a></li>
+                                                aria-label="W250 - Dénoncez-le : Racisme, discrimination raciale et droits de la personne, Contenu fourni par l'École de la fonction publique du Canada">W250
+                                                - Dénoncez-le : Racisme, discrimination raciale et droits de la
+                                                personne</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -802,8 +801,8 @@
                                         <li><img src="images/CSPS.svg" alt="" /><a
                                                 href="https://learn-apprendre.csps-efpc.gc.ca/application/fr/content/initiative-espace-positif-devenir-ambassadeur-pour-linclusion-des-personnes-lgbtq2-w081"
                                                 target="_blank"
-                                                aria-label="W081
-                                                - Initiative Espace positif : Devenir ambassadeur ou ambassadrice pour l’inclusion des personnes LGBTQ2+ , Contenu fourni par l'École de la fonction publique du Canada">W081
+                                                aria-label="HWMS02109
+                                                - Initiative Espace positif : Devenir ambassadeur ou ambassadrice pour l’inclusion des personnes LGBTQ2+ , Contenu fourni par l'École de la fonction publique du Canada">HWMS02109
                                                 - Initiative Espace positif : Devenir ambassadeur ou ambassadrice pour
                                                 l’inclusion des personnes LGBTQ2+ </a></li>
                                     </ul>
@@ -859,7 +858,7 @@
                                         <li><img src="images/CSPS.svg" alt="" /><a
                                                 href="https://www.csps-efpc.gc.ca/catalogue/courses-fra.aspx?code=W081"
                                                 target="_blank"
-                                                aria-label="W081 - Initiative Espace positif : Devenir un ambassadeur pour l’inclusion LGBTQ2+ (virtuel), Contenu fourni par l'École de la fonction publique du Canada">W081
+                                                aria-label="HWMS02109 - Initiative Espace positif : Devenir un ambassadeur pour l’inclusion LGBTQ2+ (virtuel), Contenu fourni par l'École de la fonction publique du Canada">HWMS02109
                                                 - Initiative Espace positif : Devenir un ambassadeur pour l’inclusion
                                                 LGBTQ2+ (virtuel)</a></li>
                                         <li><img src="images/CSPS.svg" alt="" />W082 - Initiative Espace positif :
@@ -978,8 +977,8 @@
                                         <li><img src="images/CCOHS.svg" alt="" /><a
                                                 href="https://www.csps-efpc.gc.ca/Catalogue/courses-fra.aspx?code=Z041"
                                                 target="_blank"
-                                                aria-label="HWMS02101 - - La santé mentale : Sensibilisation, Contenu fourni par Centre canadien d’hygiène et de sécurité au travail">HWMS02101
-                                                - - La santé mentale : Sensibilisation</a></li>
+                                                aria-label="HWMS02101 -La santé mentale : Sensibilisation, Contenu fourni par Centre canadien d’hygiène et de sécurité au travail">HWMS02101
+                                                - La santé mentale : Sensibilisation</a></li>
                                         <li><img src="images/CCOHS.svg" alt="" /><a
                                                 href="https://www.csps-efpc.gc.ca/Catalogue/courses-fra.aspx?code=Z042"
                                                 target="_blank"
@@ -989,7 +988,7 @@
                                         <li><img src="images/CCOHS.svg" alt="" /><a
                                                 href="https://www.csps-efpc.gc.ca/catalogue/courses-fra.aspx?code=Z043"
                                                 target="_blank"
-                                                aria-label="Z043 - La santé mentale: Milieux de travail sains sur le plan psychologique, Contenu fourni par Centre canadien d’hygiène et de sécurité au travail">Z043
+                                                aria-label="HWMS02113 - La santé mentale: Milieux de travail sains sur le plan psychologique, Contenu fourni par Centre canadien d’hygiène et de sécurité au travail">HWMS02113
                                                 - La santé mentale: Milieux de travail sains sur le plan
                                                 psychologique</a>
                                         </li>
